# nucleoid-backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose-dev.yml  docker-compose.yml  flake.nix
.github/workflows/: ci.yml
config/: config.json
src/: config.rs  controller.rs  database.rs  discord.rs  integrations.rs  main.rs  model.rs  mojang_api.rs  persistent.rs  web.rs
src/discord/: lfp.rs  parser.rs  pings.rs  relay.rs
src/statistics/: database.rs  leaderboards.rs  mod.rs  model.rs  wrapped.rs
src/statistics/leaderboards/: database.rs  mod.rs
src/web/: v2.rs
