[package]
name = "nucleoid-backend"
version = "0.1.0"
authors = ["Gegy <gegy1000@gmail.com>"]
edition = "2018"


# Needed for docker.
[[bin]]
name = "nucleoid-backend"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }
warp = "0.3"
reqwest = { version = "0.11", features = ["rustls-tls", "json"], default-features = false }
futures = "0.3"

deadpool-postgres = "0.10"
tokio-postgres = { version = "0.7", features = ["with-uuid-0_8"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.5"

byteorder = "1.3"
bytes = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde"] }

regex = "1.4"
lazy_static = "1.4"

serenity = { version = "0.10", default-features = false, features = ["builder", "cache", "client", "gateway", "model", "http", "rustls_backend"] }
async-trait = "0.1"

xtra = "0.5.0-rc.1"

thiserror = "1.0"

log = "0.4"
env_logger = "0.7.1"

walkdir = "2"
nucleoid-leaderboards = { git = "https://github.com/NucleoidMC/nucleoid-leaderboards.git" }

# The latest release on crates.io doesn't have support for serialising DateTime
[dependencies.clickhouse-rs]
git = "https://github.com/suharev7/clickhouse-rs"
branch = "async-await"
